...
                                    <constraint firstAttribute="height" constant="60" id="LPR-n0-E3a"/>
                                    <constraint firstAttribute="width" constant="60" id="mwt-ab-Wkq"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgE-Mw-6tc">
                                <rect key="frame" x="16" y="656" width="382" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ajG-4T-pyx"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <color key="baseForegroundColor" name="YP Black"/>
...
                    <view key="view" contentMode="scaleToFill" id="fiA-tw-P1d">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C0d-iG-q2I">
                                <rect key="frame" x="0.0" y="150" width="414" height="746"/>
                                <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                            </wkWebView>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="HlS-7H-1ba" eventType="touchUpInside" id="81d-Dn-RRL"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kvv-UG-eXv" userLabel="BackButton">
                                <rect key="frame" x="20" y="48" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="csL-CK-oM0"/>
                                    <constraint firstAttribute="width" constant="24" id="nrp-Bm-jvE"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="backward"/>
...
